Changelog for Toggle Address Box.

1.1
Improved minimum box height when unhiding the box.
Added "show" badge to the button when the box is hidden.

1.0
First release