@@ -27,8 +27,8 @@
   "applications": {
     "gecko": {
       "id": "toggleAddressBox@dillinger",
-      "strict_min_version": "78.0",
-      "strict_max_version": "102.0"
+      "strict_min_version": "101.0",
+      "strict_max_version": "107.0"
     }
   },
   "icons": {
